Brought in Episode list fragment.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,9 @@
         android:name="com.jayasuryat.characterdetails.CharacterDetailsFragment"
         android:label="CharacterDetailsFragment" />
 
+    <fragment
+        android:id="@+id/episodesListFragment"
+        android:name="com.jayasuryat.episodelist.EpisodesListFragment"
+        android:label="EpisodesListFragment" />
+
 </navigation>
