--- a/ui/home/src/main/res/layout/fragment_home.xml
+++ b/ui/home/src/main/res/layout/fragment_home.xml
@@ -91,6 +91,7 @@
                     android:layout_margin="24dp"
                     android:text="@string/episodes"
                     android:textSize="32sp"
+                    android:transitionName="episode_title"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
