Navigation setup for EDF

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,5 +23,9 @@
         android:id="@+id/episodesListFragment"
         android:name="com.jayasuryat.episodelist.EpisodesListFragment"
         android:label="EpisodesListFragment" />
+    <fragment
+        android:id="@+id/episodeDetailsFragment"
+        android:name="com.jayasuryat.episodedetails.EpisodeDetailsFragment"
+        android:label="EpisodeDetailsFragment" />
 
 </navigation>
