--- a/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
+++ b/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
@@ -35,6 +35,7 @@
         app:strokeWidth="1dp" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsvRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
