--- a/ui/episode/episodeList/src/main/res/layout/fragment_episodes_list.xml
+++ b/ui/episode/episodeList/src/main/res/layout/fragment_episodes_list.xml
@@ -44,6 +44,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivBack"
-        tools:listitem="@layout/item_big_episode" />
+        tools:listitem="@layout/item_episode_nested" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
