Migrate Character details to graphQl

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,7 @@
 
     <fragment
         android:id="@+id/characterDetailsFragment"
-        android:name="com.jayasuryat.characterdetails.CharacterDetailsFragment"
+        android:name="com.jayasuryat.characterdetails.presentation.CharacterDetailsFragment"
         android:label="CharacterDetailsFragment" />
 
     <fragment
