Migrate episode list to graphQl

--- a/ui-episode-list/src/main/res/layout/fragment_episodes_list.xml
+++ b/ui-episode-list/src/main/res/layout/fragment_episodes_list.xml
@@ -9,7 +9,7 @@
     android:background="?attr/background_color"
     android:paddingHorizontal="24dp"
     android:paddingTop="16dp"
-    tools:context=".EpisodesListFragment">
+    tools:context=".presentation.EpisodesListFragment">
 
     <ImageView
         android:id="@+id/ivBack"
