--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/episodesListFragment"
-        android:name="com.jayasuryat.episodelist.EpisodesListFragment"
+        android:name="com.jayasuryat.episodelist.presentation.EpisodesListFragment"
         android:label="EpisodesListFragment" />
     <fragment
         android:id="@+id/episodeDetailsFragment"
