--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,13 +16,19 @@
 
     <fragment
         android:id="@+id/characterDetailsFragment"
-        android:name="com.jayasuryat.characterdetails.presentation.CharacterDetailsFragment"
+        android:name="com.jayasuryat.characterdetails.presentation.character.CharacterDetailsFragment"
         android:label="CharacterDetailsFragment" />
+
+    <fragment
+        android:id="@+id/characterEpisodesFragment"
+        android:name="com.jayasuryat.characterdetails.presentation.episodes.CharacterEpisodesFragment"
+        android:label="CharacterEpisodesFragment" />
 
     <fragment
         android:id="@+id/episodesListFragment"
         android:name="com.jayasuryat.episodelist.presentation.EpisodesListFragment"
         android:label="EpisodesListFragment" />
+
     <fragment
         android:id="@+id/episodeDetailsFragment"
         android:name="com.jayasuryat.episodedetails.presentation.EpisodeDetailsFragment"
