--- a/ui-character-details/src/main/res/layout/fragment_character_details.xml
+++ b/ui-character-details/src/main/res/layout/fragment_character_details.xml
@@ -43,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="8dp"
+            android:transitionName="characterAvatar"
             app:cardElevation="0dp"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +57,6 @@
                 android:contentDescription="@string/cd_character_image"
                 android:elevation="0dp"
                 android:scaleType="centerCrop"
-                android:transitionName="characterAvatar"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:background="@color/dune" />
 
@@ -77,6 +77,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
                 android:padding="16dp">
 
                 <TextView
