--- a/ui-character-list/src/main/res/layout/item_character.xml
+++ b/ui-character-list/src/main/res/layout/item_character.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/ivAvatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="?attr/background_color"
                 android:contentDescription="@string/cd_character_image" />
 
         </androidx.cardview.widget.CardView>
