--- a/ui-base/src/main/res/values/themes.xml
+++ b/ui-base/src/main/res/values/themes.xml
@@ -17,18 +17,16 @@
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <!-- Customize your theme here. -->
 
-        <item name="android:windowBackground">?attr/background_color_light</item>
-
-        <item name="colorControlHighlight">?attr/colorSecondary</item>
-
         <item name="cardViewStyle">@style/RM.Card</item>
         <item name="materialCalendarStyle">@style/RM.Card</item>
 
-        <item name="text_title_color">@color/cod_gray</item>
+        <item name="background_color">@color/milk</item>
+        <item name="background_color_light">@color/pale_green</item>
+
         <item name="text_value_color">@color/black</item>
 
-        <item name="background_color">@color/milky</item>
-        <item name="background_color_light">@color/purple_200</item>
+        <item name="android:windowBackground">?attr/background_color_light</item>
+        <item name="colorControlHighlight">@color/grass</item>
 
     </style>
 
