Add : location list module

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,4 +34,9 @@
         android:name="com.jayasuryat.episodedetails.presentation.EpisodeDetailsFragment"
         android:label="EpisodeDetailsFragment" />
 
+    <fragment
+        android:id="@+id/locationListFragment"
+        android:name="com.jayasuryat.locationlist.presentation.LocationListFragment"
+        android:label="LocationListFragment" />
+
 </navigation>
