--- a/ui-home/src/main/res/layout/fragment_home.xml
+++ b/ui-home/src/main/res/layout/fragment_home.xml
@@ -135,6 +135,7 @@
                     android:layout_margin="24dp"
                     android:text="@string/locations"
                     android:textSize="32sp"
+                    android:transitionName="location_title"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
