--- a/ui-base/src/main/res/values/attrs.xml
+++ b/ui-base/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="accent_color" format="reference|color" />
+
     <attr name="text_value_color" format="reference|color" />
 
     <attr name="background_color" format="reference|color" />
