--- a/ui-base/src/main/res/drawable/custom_ripple.xml
+++ b/ui-base/src/main/res/drawable/custom_ripple.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/teal_200">
+    android:color="?colorControlHighlight">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/teal_200" />
+            <solid android:color="?colorControlHighlight" />
             <corners android:radius="64dp" />
         </shape>
     </item>
