--- a/ui-character-details/src/main/res/layout/item_season_break.xml
+++ b/ui-character-details/src/main/res/layout/item_season_break.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="8dp"
     android:layout_marginBottom="8dp"
-    app:cardBackgroundColor="?attr/colorControlHighlight"
+    app:cardBackgroundColor="?attr/accent_color"
     app:cardCornerRadius="32dp" />
