--- a/ui-home/src/main/res/layout/fragment_home.xml
+++ b/ui-home/src/main/res/layout/fragment_home.xml
@@ -17,13 +17,14 @@
         android:padding="24dp"
         tools:alpha="1">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcvCharacters"
             style="@style/RM.Card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/mcvEpisodes"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:rippleColor="?colorControlHighlight">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -57,16 +58,17 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcvEpisodes"
             style="@style/RM.Card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
             app:layout_constraintBottom_toTopOf="@+id/mcvLocations"
-            app:layout_constraintTop_toBottomOf="@+id/mcvCharacters">
+            app:layout_constraintTop_toBottomOf="@+id/mcvCharacters"
+            app:rippleColor="?colorControlHighlight">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -99,16 +101,17 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcvLocations"
             style="@style/RM.Card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mcvEpisodes">
+            app:layout_constraintTop_toBottomOf="@+id/mcvEpisodes"
+            app:rippleColor="?colorControlHighlight">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -141,7 +144,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
