--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,12 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/homeScreen">
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.jayasuryat.home.HomeFragment"
         android:label="HomeFragment" />
+
+    <fragment
+        android:id="@+id/homeScreen"
+        android:name="com.jayasuryat.home.HomeScreen"
+        android:label="HomeScreen" />
 
     <fragment
         android:id="@+id/characterListFragment"
