--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -3,20 +3,20 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.98"
-      android:scaleY="0.98"
-      android:translateX="1.08"
-      android:translateY="1.08">
-    <group>
-      <clip-path
-          android:pathData="M0,0h108v108h-108z"/>
-      <path
-          android:pathData="M0,0h108v108h-108z"
-          android:fillColor="#0D161D"/>
-      <path
-          android:pathData="M108,0H0V108H108V0ZM54,85C71.121,85 85,71.121 85,54C85,36.879 71.121,23 54,23C36.879,23 23,36.879 23,54C23,71.121 36.879,85 54,85Z"
-          android:fillColor="#03DAC5"
-          android:fillType="evenOdd"/>
+    <group
+        android:scaleX="0.98"
+        android:scaleY="0.98"
+        android:translateX="1.08"
+        android:translateY="1.08">
+        <group>
+            <clip-path android:pathData="M0,0h108v108h-108z" />
+            <path
+                android:fillColor="#0D161D"
+                android:pathData="M0,0h108v108h-108z" />
+            <path
+                android:fillColor="#03DAC5"
+                android:fillType="evenOdd"
+                android:pathData="M108,0H0V108H108V0ZM54,85C71.121,85 85,71.121 85,54C85,36.879 71.121,23 54,23C36.879,23 23,36.879 23,54C23,71.121 36.879,85 54,85Z" />
+        </group>
     </group>
-  </group>
 </vector>
